<resources>
    <string name="app_name">Airport VMS</string>
    <string name="send">Send Data</string>
    <string name="requireCamera">Camera permission is required</string>
    <string name="label_login">Login</string>
    <string name="hint_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="location">Location</string>
    <string name="scanQR">Scan QR</string>
    <string name="myProfile">My Profile</string>
    <string name="Zones">Zone</string>
    <string name="setting">Setting</string>
    <string name="about">About Us</string>
    <string name="tab_home">Home</string>
    <string name="tab_flights">Flight</string>
    <string name="tab_flightInfo">Flight Info</string>
    <string name="tab_help">Help</string>
    <string name="selectZone">Select Zone</string>
    <string name="done">Done</string>
    <string name="commingsoon">Coming Soon...</string>
    <string name="vipScan">VIP Scan</string>
    <string name="logOut">Logout</string>
    <string name="message_logout">Are you sure you want to log out?</string>
</resources>
